examples/test/testpolicy8132.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8132
  namespace: namespace18
spec:
  podSelector:
    matchLabels:
      key14: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value0
          key48: value23
      podSelector:
        matchLabels:
          key10: value27
          key26: value35
          key24: value48
